package org.example.enums;

public enum OperatingStatus {
    IN_OPERATION_FREE,
    OCCUPIED,
    OUT_OF_ORDER
}
