classDiagram
    class ElectricFillingStationNetwork {
        +main()
    }

    class AccountManager {
        INSTANCE AccountManager
        accounts: Account [*]
        +createAccount()
        +readAccount()
        +updateAccount()
        +deleteAccount()
    }

    class CreditManager {
        INSTANCE CreditManager
        +topUpCredit()
    }

    class LocationManager {
        INSTANCE LocationManager
        locations: Location [*]
        +createLocation()
        +updateLocationPricing()
        +updateLocationAddress()
        +deleteLocation()
        +monitorLocationNetwork()
    }

    class ChargingPointManager {
        INSTANCE ChargingPointManager
        chargingPoints: ChargingPoint [*]
        +createChargingPoint()
        +deleteChargingPoint()
    }

    class ChargingSessionManager {
        INSTANCE ChargingSessionManager
        chargingSessions: ChargingSession [*]
        +createChargingSession(Account, ChargingPoint)
        +endChargingSession()
        +readChargingSession()
    }

    class InvoiceManager {
        INSTANCE InvoiceManager
        invoices: Invoice [*]
        +createInvoiceFromSession()
        +readFinancialHistoryForAccount
        +readGlobalFinancialHistory
    }

    class Account {
        customerID: string
        name: string
        email: string
        password: string
        credit: Credit
    }

    class Credit {
        history: Transaction [*]
        amount: double
        lastUpdated: LocalDateTime
        +addCredit()
        +subtractCredit()
    }

    class Tariff {
        mode: ChargingMode
        pricePerKwh: double
        pricePerMinute: double
        validFrom: LocalDateTime
    }


    class Location {
        locationID: string
        address: string
        name: string
        chargingPoints: List<ChargingPoint>
        tariffs: List<Tariff>
        +addChargingPoint
        +addTariff
        +readTariffAt
    }


    class ChargingPoint {
        chargingPointID: string
        chargingPointName: string
        operatingStatus: OperatingStatus
        location: Location
        isPhysicallyConnected: boolean

        +updateOperatingStatus(Operating Status)
        +connectVehicle()
        +disconnectVehicle()
    }

    class ChargingSession {
        sessionID: string
        chargingPoint: ChargingPoint
        active: boolean
        account: Account
        tariffAtStart: Tariff
        startTime: string
        duration: integer
        energyUsed: double
        price: double
        +endSession
        +calculatePrice
    }

    class Invoice {
        invoiceItemNumber: string
        session: ChargingSession
        account: Account
    }

    class OperatingStatus {
        InOperationFree
        Occupied
        OutOfOrder
    }

    class ChargingMode {
        AC
        DC
    }

    <<enumeration>> OperatingStatus
    <<enumeration>> ChargingMode

    ElectricFillingStationNetwork "1" *--> "1" AccountManager
    ElectricFillingStationNetwork "1" *--> "1" CreditManager
    ElectricFillingStationNetwork "1" *--> "1" LocationManager
    ElectricFillingStationNetwork "1" *--> "1" ChargingPointManager
    ElectricFillingStationNetwork "1" *--> "1" ChargingSessionManager
    ElectricFillingStationNetwork "1" *--> "1" InvoiceManager
    CreditManager ..>  Credit : creates
    AccountManager "1" *--> "*" Account
    LocationManager "1" *--> "*" Location
    ChargingPointManager ..> ChargingPoint : creates
    ChargingSessionManager "1" *--> "*" ChargingSession
    InvoiceManager "1" *--> "*" Invoice
    Account "1" *--> "1" Credit
    Location "1" *--> "0..*" ChargingPoint
    Location "1" *--> "0..*" Tariff
    ChargingPoint "1" --> "0..*" ChargingSession
    Account "1" --> "0..*" ChargingSession
    ChargingSession "1" --> "1" Invoice
    Account "1" -- "0..*" Invoice
